# het-veldje

./: LICENSE  Procfile  pyproject.toml  requirements.txt
content/dogs/: maika-donatas.toml
content/faq/: banjer-insta.md  bijdragen.md  honden-herbergen.md  suggesties.md
hetveldje/: app.py  constants.py  contexts.py  debug.py  types.py  utils.py
hetveldje/services/: baserow.py  cms.py  weather.py
sass/: _colors.sass  _core-layout.sass  _dog.sass  _faq.sass  _fonts.sass  _landing.sass  _nav.sass  _typography.sass  style.sass
static/css/: style.css  style.css.map
static/js/: modal.js
templates/: base.html  dog-list.html  faq.html  landing.html
templates/partials/: dog.html
