[tool.poetry]
name = "het-veldje"
version = "0.1.0"
description = "FastAPI app voor info omtrent het veldje in kanaleneiland"
authors = ["fliepeltje <donatas@rasiukevicius.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
